# tdcpass

./: .env.example  .gitignore  Makefile  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
config/: cache_shortcuts.yml  data_sources.yml  lp_specs.yml  output_contract.yml  project.yml  quality_tiers.yml  regime_specs.yml  series_registry.yml  shock_specs.yml  site_map.yml
data/: README.md
docs/: output_schema.md  research_design.md
examples/: manual_run.md  quickstart.sh
scripts/: discover_sibling_caches.py  run_demo.py
site/: index.html
tests/: test_accounting.py  test_accounting_identity.py  test_backend_closeout_report.py  test_backend_closeout_summary.py  test_backend_decision_bundle.py  test_backend_decision_bundle_report.py  test_backend_evidence_packet.py  test_backend_evidence_packet_report.py  test_big_picture_synthesis.py  test_broad_scope_system.py  test_build_panel.py  test_call_report_components.py  test_cli_pipeline.py  test_contracts.py  test_core_treatment_promotion.py  test_counterpart_channel_scorecard.py  test_demo_pipeline.py  test_deposit_component_scorecard.py  test_direct_identification.py  test_exact_baseline_alignment_slice.py  test_factor_control_diagnostics.py  test_fetchers_fiscaldata.py  test_fetchers_frb.py  test_historical_cash_term_reestimation_summary.py  test_identity_baseline.py  test_pass_through_summary.py  test_period_sensitivity.py  test_proxy_coverage.py  test_proxy_factor_diagnostics.py  test_public_mirror_consistency.py  test_published_state_proxy_comparator.py  test_published_state_proxy_report.py  (+56 more)
(+249 files in other folders)
