[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdcpass"
version = "0.1.0"
description = "Public research code for Treasury Contribution to Deposits and independently measured non-TDC deposit evidence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "statsmodels>=0.14"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
tdcpass = "tdcpass.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
